# configurant

./: CHANGELOG.md  README.md  configurant.cabal  hie.yaml
.github/workflows/: ci.yml
app/: Main.hs
src/: Configurant.hs
src/Configurant/: Internal.hs
src/Data/: Configurant.hs
src/Data/Configurant/: Internal.hs
test/: Spec.hs
