cabal-version:       2.4
name:                configurant
version:             0.0.0.0
synopsis:            Manage configuation data from environment variables.
description:         Manage configuation data from environment variables.
homepage:            https://github.com/patrickt/configurant
bug-reports:         https://github.com/patrickt/configurant/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          Patrick Thomson <patrick.william.thomson@gmail.com>
copyright:           2020 Patrick Thomson
category:            Configuration
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/patrickt/configurant.git

common common-options
  build-depends:       base ^>= 4.13.0.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  build-depends:       tagged ^>= 0.8.6
                     , validators ^>= 0.0.1
  hs-source-dirs:      src
  exposed-modules:     Data.Configurant
                       Data.Configurant.Internal

test-suite configurant-test
  import:              common-options
  build-depends:       configurant
                     , hedgehog ^>= 1
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
